--- a/src/redmi-app/redmi-app.component.html
+++ b/src/redmi-app/redmi-app.component.html
@@ -1,4 +1,4 @@
 <div class="bigbox">
-  <app-rredmi class="rredmi"></app-rredmi>
-  <app-redmi-details class="redmi-details"></app-redmi-details>
+  <app-rredmi class="rredmi" (redmiSelected)="rrrredmi($event)"></app-rredmi>
+  <app-redmi-details class="redmi-details" [MI]="MI"></app-redmi-details>
 </div>
