--- a/src/redmi-app/redmi-details/redmi-details.component.html
+++ b/src/redmi-app/redmi-details/redmi-details.component.html
@@ -1,3 +1,20 @@
-<p>
+<!-- <p>
 redmi-details works!
-</p>
+</p> -->
+
+<div class="bigbox">
+
+  <div class="DP">
+    <img [src]="MI.DP" alt="" />
+  </div>
+  <div class="name">
+    <p>{{ MI.id }}</p>
+    <p>{{ MI.name }}</p>
+  </div>
+  <div class="MRP">
+    <p>{{ MI.MRP}}</p>
+  </div>
+  <div class="info">
+    <p>{{ MI.info }}</p>
+  </div>
+</div>
