--- a/src/redmi-app/rredmi/rredmi.component.html
+++ b/src/redmi-app/rredmi/rredmi.component.html
@@ -3,6 +3,7 @@
     class="redmi-inside-box"
     *ngFor="let RedmiHalfDetails of rredmi"
     [redmiHalfDetails]="RedmiHalfDetails"
+    (click)="selected(RedmiHalfDetails)"
   >
   </app-redmi-inside-box>
 </div>
