--- a/src/redmi-app/rredmi/redmi-inside-box/redmi-inside-box.component.html
+++ b/src/redmi-app/rredmi/redmi-inside-box/redmi-inside-box.component.html
@@ -1,15 +1,12 @@
-
-<div class="bigboc">
-
-
+<div class="bigbox">
   <div class="DP">
-    <img [src]="redmiHalfDetails.DP" alt="">
+    <img [src]="redmiHalfDetails.DP" alt="" />
   </div>
   <div class="name">
-    <p>{{redmiHalfDetails.id}}</p>
-    <h1>{{redmiHalfDetails.name}}</h1>
+    <p>{{ redmiHalfDetails.id }}</p>
+    <h1>{{ redmiHalfDetails.name }}</h1>
   </div>
   <div class="MRP">
-        <p>{{redmiHalfDetails.MRP}}</p>
+    <p>{{ redmiHalfDetails.MRP }}</p>
   </div>
 </div>
